--- a/Dia7/Style/Styles/Style.css
+++ b/Dia7/Style/Styles/Style.css
@@ -117,9 +117,7 @@
     margin: 29px 16px 56px 40px ;
 
 }
-.metroLogo2{
 
-}
 .metroLogo3{
     top: 876px;
     left: 1195px;
@@ -206,5 +204,103 @@ display: flex;
 }
 .juan{
     font-family: "letrica1";    
+}
+.link{
+    text-decoration: none;
+}
+.letras13{
+    font-family: "letrica1";    
+}
+.barranegro1{
+    top: 507px;
+    left: 1430px;
+    width: 23px;
+    height: 187px;
+    opacity: 1;
+}
+.cantidad{
+    color: #E6E6E6;
+}
+.l04{
+    color: grey;
+}
+.l05{
+    color: #ffffff;
+}
+.l06{
+    color: grey;
+}
+.link{
+    color: #000000;
+}
+/**pagina 2**/
+.Blanco_Tarjeta2{
+    top: 303px;
+left: 459px;
+width: 576px;
+height: 324px;
+background:  0% 0% no-repeat padding-box;
+opacity: 1;
+margin: 103px 0px 50px -630px;
+}
+.letras122{
+    top: 600px;
+left: 401px;
+width: 700px;
+height: 55px;
+font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-40)/var(--unnamed-line-spacing-55) var(--unnamed-font-family-open-sans);
+letter-spacing: var(--unnamed-character-spacing-0);
+color: var(--unnamed-color-000000);
+text-align: left;
+font-family: "letrica1";
+font-size: 40px;
+letter-spacing: 0px;
+color: #000000;
+opacity: 1;
+margin: -200px 100px 100px 200px;
+}
+.letras123{
+    top: 600px;
+    left: 401px;
+    width: 700px;
+    height: 55px;
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-40)/var(--unnamed-line-spacing-55) var(--unnamed-font-family-open-sans);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-000000);
+    text-align: left;
+    font-family: "letrica1";
+    font-size: 27px;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+    margin: -100px 100px 100px 388px;
+}
+.letras124{
+    top: 600px;
+    left: 401px;
+    width: 700px;
+    height: 55px;
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-40)/var(--unnamed-line-spacing-55) var(--unnamed-font-family-open-sans);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-000000);
+    text-align: left;
+    font-family: "letrica1";
+    font-size: 27px;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+    margin: -100px 100px 100px 448px;
+}
+.letras125{
+    top: 799px;
+left: 595px;
+width: 288px;
+height: 58px;
+border: 1px solid #707070;
+align-content: center;
+border-radius: 10px;
+opacity: 1;
+margin: -100px 0px 0px 400px;
+color: gray;
 }
 
