--- a/Dia11/style.css
+++ b/Dia11/style.css
@@ -1,18 +1,140 @@
-.cuadro1{
-    display: flex;
-    column-gap: 50px color"black";
-    row-gap: 50px color"black"; 
-    flex-wrap: wrap;
+.flex-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: rgb(0, 0, 0);
+    grid-template-rows: repeat(5 1fr);
+    border-radius: 8px;
+    padding: 2vw;
+    gap: 0.10vw;
+  }
+  
+.flex-container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
     
-}
-.cuadro1_1{
-}
-.cuadro1_2{
+    }
+.flex-container_element-1{ 
+    border-radius: 8px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    height: 90%;
+ }
+
+
+.flex-container_element-2{
+    grid-column: 1/2;
+    grid-row: 2/3;
+ 
+    border-radius: 8px;
     
-}
-.cuadro1_3{
-   
-}
-.cuadro1_4{
+    
 
 }
+.flex-container_element-3{
+    border-radius: 8px;
+    
+    grid-column: 2/3;
+    grid-row: 1/3;
+    
+   
+
+}
+.flex-container_element-4{
+    border-radius: 8px;
+
+    grid-column: 1/3;
+    grid-row: 5/5;
+
+}
+.elemento1{ height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+}
+.elemento2{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+}
+.elemento3{
+    height: 100%;
+   
+
+    width: 100%;
+    object-fit: cover;
+    gap: 8vw;
+}
+.elemento4{
+    height: 60vw;
+    width: 100%;
+    object-fit: cover;
+    
+
+}
+
+.blanco{
+    background-color: white;
+    
+}
+.flex-container-2{
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: rgb(0, 0, 0);
+    grid-template-rows: repeat(5 1fr);
+    border-radius: 8px;
+    padding: 2vw;
+    gap: 0.1vw;
+    
+}
+.flex-container-2 > div{
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+}
+.flex-container-2_element-1{
+    
+    border-radius: 8px;
+    grid-column: 1/1;
+    
+    height: 90%;
+
+}
+.flex-container-2_element-2{
+    
+    grid-column: 1/2;
+    grid-row: 2/2;
+ 
+    border-radius: 8px;
+    
+
+}
+.flex-container-2_element-3{
+
+    border-radius: 8px;
+    
+    grid-column: 2/3;
+    grid-row: 1/3;
+    
+}
+.img5{
+    width: 100%;
+    height: 100%;
+    
+
+}
+.img6{ 
+    width: 100%;
+    height: 100%;
+
+}
+.img7{
+    width: 100%;
+    height: 100%;
+
+}
+
